# RayTracing_OpenGL

./: .gitignore  CMakeLists.txt  README.md  imgui.ini
include/RayTracing_OpenGL/DataStorage/: DataStorage.h
include/RayTracing_OpenGL/Interface/: Interface.h
include/RayTracing_OpenGL/Renderer/: Renderer.h
include/RayTracing_OpenGL/Renderer/Tracer/: Objects.h  Tracer.h
include/RayTracing_OpenGL/Tracer/: Objects.h  Tracer.h
include/RayTracing_OpenGL/Window/: Window.h
include/RayTracing_OpenGL/WindowStorage/: WindowStorage.h
include/RayTracing_OpenGL/gears/: Functions.h  StaticThreadPool.hpp
include/RayTracing_SFML_OpenGL/: Functions.h
include/RayTracing_SFML_OpenGL/Tracer/: Objects.h  Tracer.h
include/RayTracing_SFML_OpenGL/WindowStorage/: WindowStorage.h
include/RayTracing_SFML_OpenGL/gears/: Functions.h
shaders/: fragment.glsl  shader.frag  shader.vert  vertex.glsl
src/RayTracing_OpenGL/: Main.cpp
src/RayTracing_OpenGL/DataStorage/: DataStorage.cpp
src/RayTracing_OpenGL/Interface/: Interface.cpp
src/RayTracing_OpenGL/Renderer/: Renderer.cpp
src/RayTracing_OpenGL/Renderer/Tracer/: Objects.cpp  Tracer.cpp
src/RayTracing_OpenGL/Tracer/: Objects.cpp  Tracer.cpp
src/RayTracing_OpenGL/Window/: Window.cpp
src/RayTracing_OpenGL/WindowStorage/: WindowStorage.cpp
src/RayTracing_OpenGL/gears/: Functions.cpp  StaticThreadPool.cpp
src/RayTracing_SFML_OpenGL/: Functions.cpp  Main.cpp
src/RayTracing_SFML_OpenGL/Tracer/: Objects.cpp  Tracer.cpp
src/RayTracing_SFML_OpenGL/WindowStorage/: WindowStorage.cpp
src/RayTracing_SFML_OpenGL/gears/: Functions.cpp  StaticThreadPool.cpp
